Fix nav trigger spacing

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,1 +1,14 @@
 // Header
+
+.page-header {
+    padding: 1.5rem 3.5rem 1.5rem 1rem;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    line-height: 1;
+    border-bottom: 1px solid $primary;
+
+    @media (min-width: $bp-s) {
+        padding: 1.75rem 6rem 1.5rem 2rem;
+        font-size: 2.5rem;
+    }
+}
